# rang

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  conanfile.py  flake.nix
ci/: extract_sources.py
cmake/templates/: build_config.hpp.cmake.in  build_config_script.cmake.in  build_timestamp.h.cmake.in  build_timestamp_script.cmake.in
include/: app_info.hpp  app_state.hpp  client_main.hpp  client_task.hpp  compatibility.hpp  keystroke_parser.hpp  main_task.hpp  meta.hpp  normal_main.hpp  qt_operators.hpp  unix_signal.hpp  user_input.hpp
include/buffer/: buffer.hpp  command_buffer.hpp  file_info_buffer.hpp  file_list_buffer.hpp  path_buffer.hpp  text_file_preview_buffer.hpp
include/commands/: command.hpp  set_current_dir_command.hpp  set_preview_file_command.hpp
include/ipc/: connection_handler.hpp  connection_to_client_handler.hpp  listener.hpp
include/ipc/messages/: authentication_message.hpp  message.hpp  messages.hpp  set_current_dir_message.hpp  set_preview_file_message.hpp
include/layout/: horizontal_layout.hpp  layout.hpp  vertical_layout.hpp  window_layout.hpp
include/ncurses/: base.hpp  impl.hpp  ncurses.hpp  window.hpp
include/register/: current_dir_register.hpp  path_register.hpp  register.hpp
include/renderer/: command_renderer.hpp  renderer.hpp  text_renderer.hpp
include/term/: manip.hpp  modifiers.hpp  terminal.hpp  window.hpp
include/text/: color.hpp  line.hpp  word.hpp
include/utility/: trie.hpp
src/: CMakeLists.txt  app_info.hpp  app_state.cpp  app_state.hpp  client_main.cpp  client_task.cpp  client_task.hpp  keystroke_parser.cpp  main.cpp  main_task.cpp  main_task.hpp  meta.cpp  normal_main.cpp  qt_operators.cpp  unix_signal.cpp  user_input.cpp
src/buffer/: buffer.cpp  buffer.hpp  command_buffer.cpp  file_info_buffer.cpp  file_info_buffer.hpp  file_list_buffer.cpp  file_list_buffer.hpp  path_buffer.cpp  path_buffer.hpp  text_file_preview_buffer.cpp  text_file_preview_buffer.hpp
src/commands/: command.cpp  set_current_dir_command.cpp  set_preview_file_command.cpp
src/ipc/: connection_handler.cpp  connection_handler.hpp  connection_to_client_handler.cpp  connection_to_client_handler.hpp  listener.cpp  listener.hpp
src/ipc/messages/: authentication_message.cpp  message.cpp  message.hpp  messages.cpp  set_current_dir_message.cpp  set_current_dir_message.hpp  set_preview_file_message.cpp
src/layout/: horizontal_layout.cpp  layout.cpp  vertical_layout.cpp  window_layout.cpp
src/ncurses/: base.cpp  window.cpp
src/register/: current_dir_register.cpp  path_register.cpp  path_register.hpp  register.cpp  register.hpp
src/renderer/: command_renderer.cpp  renderer.cpp  renderer.hpp  terminal_renderer.cpp  terminal_renderer.hpp  text_renderer.cpp  text_renderer.hpp
src/term/: manip.cpp  terminal.cpp  window.cpp
src/text/: color.cpp  line.cpp  word.cpp
src/utility/: trie.cpp
src/window/: window.cpp  window.hpp
test/: CMakeLists.txt  buffer_test.cpp  ipc_test.cpp  keystroke_test.cpp  ncurses_test.cpp  terminal_test.cpp  test.cpp
